[package]
name = "usbw"
version = "0.0.2"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "basic USB driver. So far just a wrapper for `rusb`. Planning on wrapping `libusb` later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = {version = "0.5.5"}
futures_util = {version = "0.3.4", default_features = false}
# Planning on removing depenences from driver_async
#driver_async = {version="0.0.2", path="../../async_driver"}