[package]
name = "usbw"
version = "0.0.2"
authors = ["AndrewGi <andrew@gilbrough.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "basic USB driver. So far just a wrapper for `rusb`. Planning on wrapping `libusb` later"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = ["libusb"]
libusb = ["libusb1-sys", "std", "libc"]
winusb = ["winapi/winusb", "std"]

[dependencies]

winapi = {version = "0.3.8", default_features = false, optional = true}
libc = {version = "0.2", default_features = false, optional = true}
libusb1-sys = {version = "0.5", default_features = false, optional = true}
futures-util = {version = "0.3.8", default_features = false}

# Planning on removing depenences from driver_async
driver_async = {version="0.0.3", path="../async_driver"}
# Used for the async libusb transfer Drop.
blocking = "1.0"
[dev-dependencies]
tokio = "0.3"
